Moving from homesick

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,3 +5,4 @@
       path: bin/git-wtf
       create: true
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
+    ~/.rpmmacros: rpmmacros
