--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,3 +7,4 @@
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.rpmmacros: rpmmacros
+    ~/bin/purge: purge/purge
