--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,6 +5,7 @@
       path: bin/git-wtf
       create: true
     ~/bin/blink2-tool: blink1-toys/blink2-tool
+    ~/bin/sns_beam: blink1-toys/sns_beam
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.rpmmacros: rpmmacros
     ~/bin/purge: purge/purge
