--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,10 @@
       create: true
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/sns_beam: blink1-toys/sns_beam
+    ~/bin/todo.sh: todo.txt-cli/todo.sh
+    ~/bin/purge: purge/purge
+    ~/.bash_completion.d/todo_completion:
+      path: todo.txt-cli/todo_completion
+      create: true
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.rpmmacros: rpmmacros
-    ~/bin/purge: purge/purge
