Moving to head for todo.actions.d

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,9 +18,9 @@
     ~/bin/todo.sh: todo.txt-cli/todo.sh
     ~/.bash_completion.d/todo_completion: todo.txt-cli/todo_completion
     ~/.todo.actions.d/again: todo.actions.d/todo.txt-cli-again-addon/again
-    ~/.todo.actions.d/edit: todo.actions.d/edit
+    ~/.todo.actions.d/edit: todo.actions.d/todo.txt-edit-addon/todo.actions.d/edit
     ~/.todo.actions.d/futureTasks: todo.actions.d/futureTasks
-    ~/.todo.actions.d/pri: todo.actions.d/pri
+    ~/.todo.actions.d/pri: todo.actions.d/todo.txt-pri-addon/.todo.actions.d/pri
     ~/.todo.actions.d/repeat: todo.actions.d/repeat
     ~/.todo.actions.d/repeat.py: todo.actions.d/repeat.py
     ~/.todo.actions.d/sortCommand: todo.actions.d/sortCommand
