Adding first pass at topydo configuration

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/bin/purge: purge/purge
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.rpmmacros: rpmmacros
+    ~/.topydo: topydo.conf
 
 - link:
     ~/bin/todo.sh: todo.txt-cli/todo.sh
