--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
 
 - link:
     ~/.bash_profile: bash_profile
+    ~/.bashrc: bashrc
     ~/bin/git-wtf: bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/fixwhitespace: 39b4abe7706cfe83f735/fixwhitespace
