--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bash-git-prompt"]
 	path = bash-git-prompt
 	url = https://github.com/magicmonty/bash-git-prompt.git
+[submodule "mantid-tools"]
+	path = mantid-tools
+	url = https://github.com/peterfpeterson/mantid-tools.git
