--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -25,6 +25,8 @@
     ~/bin/sns_beam: blink1-toys/sns_beam
     ~/bin/stats: bin/stats
     ~/bin/travisci-to-blink1.sh: bin/travisci-to-blink1.sh
+    ~/.bash_completion.d/ctest: bash_completions.d/ctest
+    ~/.bash_completion.d/dropbox_bash_completion: bash_completions.d/dropbox_bash_completion
     ~/.conkyrc: conkyrc
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.emacs: emacs
