--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     - [mkdir -p ~/.todo]
     - [mkdir -p ~/.mantid]
     - [cp Mantid.user.properties ~/.mantid/Mantid.user.properties]
+    - [tools/bootstrap-rpm.sh]
 
 - link:
     ~/.bash_profile: bash_profile
