Fixng mantid console logging level

--- a/Mantid.user.properties
+++ b/Mantid.user.properties
@@ -13,8 +13,8 @@ datasearch.searcharchive=On
 
 #uncomment to change logging level. Valid values are: error, warning, notice, information, debug
 logging.loggers.root.level=information
-logging.loggers.fileFilterChannel.level=information
-logging.loggers.consoleFilterChannel.level=information
+logging.channels.fileFilterChannel.level=information
+logging.channels.consoleFilterChannel.level=information
 
 default.facility=SNS
 default.instrument=POWGEN
