ConsoleChannel should write to stdout

--- a/Mantid.user.properties
+++ b/Mantid.user.properties
@@ -14,6 +14,7 @@ datasearch.searcharchive=On
 #uncomment to change logging level. Valid values are: error, warning, notice, information, debug
 logging.loggers.root.level=information
 logging.channels.fileFilterChannel.level=information
+logging.channels.consoleChannel.class=StdoutChannel
 logging.channels.consoleFilterChannel.level=information
 
 default.facility=SNS
