Changing divide by bin with preference

--- a/Mantid.user.properties
+++ b/Mantid.user.properties
@@ -14,7 +14,6 @@ datasearch.searcharchive=On
 #uncomment to change logging level. Valid values are: error, warning, notice, information, debug
 logging.loggers.root.level=information
 logging.channels.fileFilterChannel.level=information
-logging.channels.consoleChannel.class=StdoutChannel
 logging.channels.consoleFilterChannel.level=information
 
 default.facility=SNS
@@ -24,4 +23,7 @@ MantidOptions.InstrumentView.UseOpenGL=On
 
 #usagereports.enabled=1
 
-algorithms.categories.hidden=DataHandling\\LiveData\\Support;Deprecated;Utility\\Development;Workflow\\Inelastic\\UsesPropertyManager;Workflow\\SANS\\UsesPropertyManager
+# normalize by bin width can be "On" or "Off"
+graph1d.autodistribution = Off
+
+algorithms.categories.hidden=DataHandling\\LiveData\\Support;Deprecated;Workflow\\Inelastic\\UsesPropertyManager;Workflow\\SANS\\UsesPropertyManager
