--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "mantid-tools"]
 	path = mantid-tools
 	url = https://github.com/peterfpeterson/mantid-tools.git
+[submodule "ctest-completion"]
+	path = ctest-completion
+	url = https://gist.github.com/7929954.git
