Adding convenience script for starting vrpn

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,6 +28,7 @@
     ~/bin/sns_beam: blink1-toys/sns_beam
     ~/bin/stats: bin/stats
     ~/bin/travisci-to-blink1.sh: bin/travisci-to-blink1.sh
+    ~/bin/vrpn_server: bin/vrpn_server
     ~/.bash_completion.d/ctest: ctest-completion/ctest
     ~/.bash_completion.d/dropbox_bash_completion: bash_completions.d/dropbox_bash_completion
     ~/.conkyrc: conkyrc
