--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
     ~/.bashrc: bashrc
     ~/bin/git-wtf: bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
+    ~/bin/conky-i3bar: conky-i3bar
     ~/bin/dropbox: bin/dropbox.py
     ~/bin/git-clang-format: bin/git-clang-format
     ~/bin/iwyu_tool.py: bin/iwyu_tool.py
@@ -36,6 +37,7 @@
     ~/.bash_completion.d/tmux_completion: tmux-bash-completion/completions/tmux
     ~/.config/i3/config: i3config
     ~/.conkyrc: conkyrc
+    ~/.conkyrc-i3: conkyrc-i3
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.emacs: emacs
     ~/.fonts/FiraCode.glyphs: font-FiraCode/FiraCode.glyphs
