--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,8 +23,9 @@
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/conky-i3bar: conky-i3bar
     ~/bin/dropbox: bin/dropbox.py
-    ~/bin/git-list-pr: bin/git-list-pr
+    ~/bin/git-autopep8: bin/git-autopep8
     ~/bin/git-clang-format: bin/git-clang-format
+    ~/bin/git-list-pr: bin/git-list-pr
     ~/bin/iwyu_tool.py: bin/iwyu_tool.py
     ~/bin/jenkins_mantid_to_blink1.sh: blink1-toys/jenkins_mantid_to_blink1.sh
     ~/bin/load-to-blink1.sh: bin/load-to-blink1.sh
