--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,7 @@
     - [cp 39b4abe7706cfe83f735/fixwhitespace ~/bin]
     - [chmod 755 ~/bin/fixwhitespace]
     - [cp Mantid.user.properties ~/.mantid/Mantid.user.properties]
+    - [crontab crontab]
 
 - link:
     ~/.bash_profile: bash_profile
