--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.bashrc: bashrc
     ~/bin/git-wtf: bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
+    ~/bin/build-list.py: bin/build-list.py
     ~/bin/conky-i3bar: conky-i3bar
     ~/bin/dropbox: bin/dropbox.py
     ~/bin/git-clang-format: bin/git-clang-format
