Add shell script to make running watchman easier

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -39,6 +39,7 @@
     ~/bin/stats: bin/stats
     ~/bin/travisci-to-blink1.sh: bin/travisci-to-blink1.sh
     ~/bin/vrpn_server: bin/vrpn_server
+    ~/bin/watchman.sh: bin/watchman.sh
     ~/.bash_completion.d/ctest: ctest-completion/ctest
     ~/.bash_completion.d/dropbox_bash_completion: bash_completions.d/dropbox_bash_completion
     ~/.bash_completion.d/tmux_completion: tmux-bash-completion/completions/tmux
