Add bash completion for watchman wrapper

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -41,6 +41,7 @@
     ~/bin/vrpn_server: bin/vrpn_server
     ~/bin/watchman.sh: bin/watchman.sh
     ~/.bash_completion.d/ctest: ctest-completion/ctest
+    ~/.bash_completion.d/watchman_sh: bash_completions.d/watchman_sh
     ~/.bash_completion.d/dropbox_bash_completion: bash_completions.d/dropbox_bash_completion
     ~/.bash_completion.d/tmux_completion: tmux-bash-completion/completions/tmux
     ~/.config/autostart/chrome.desktop: config/autostart/chrome.desktop
