--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,6 +20,7 @@
 - link:
     ~/.bash_profile: bash_profile
     ~/.bashrc: bashrc
+    ~/bin/beamstatus: bin/beamstatus
     ~/bin/git-wtf: bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/build-list.py: bin/build-list.py
