--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.bash_profile: bash_profile
     ~/.bashrc: bashrc
     ~/bin/beamstatus: bin/beamstatus
+    ~/bin/daysuntil: bin/daysuntil
     ~/bin/git-wtf: bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/build-list.py: bin/build-list.py
