--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,12 @@
     ~/bin/update_countdown.sh: bin/update_countdown.sh
     ~/bin/vrpn_server: bin/vrpn_server
     ~/bin/watchman.sh: bin/watchman.sh
+    ~/.bash_completion.d/ansible-completion.bash: ansible-bash-completion/ansible-completion.bash
+    ~/.bash_completion.d/ansible-doc-completion.bash: ansible-bash-completion/ansible-doc-completion.bash
+    ~/.bash_completion.d/ansible-galaxy-completion.bash: ansible-bash-completion/ansible-galaxy-completion.bash
+    ~/.bash_completion.d/ansible-playbook-completion.bash: ansible-bash-completion/ansible-playbook-completion.bash
+    ~/.bash_completion.d/ansible-pull-completion.bash: ansible-bash-completion/ansible-pull-completion.bash
+    ~/.bash_completion.d/ansible-vault-completion.bash: ansible-bash-completion/ansible-vault-completion.bash
     ~/.bash_completion.d/ctest: ctest-completion/ctest
     ~/.bash_completion.d/watchman_sh: bash_completions.d/watchman_sh
     ~/.bash_completion.d/dropbox_bash_completion: bash_completions.d/dropbox_bash_completion
