--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,7 +23,11 @@
     ~/.bashrc: bashrc
     ~/bin/beamstatus: bin/beamstatus
     ~/bin/daysuntil: bin/daysuntil
-    ~/bin/git-wtf: bin/git-wtf
+    ~/bin/git-publish-branch: willgit/bin/git-publish-branch
+    ~/bin/git-rank-contributors: willgit/bin/git-rank-contributors
+    ~/bin/git-show-merges: willgit/bin/git-show-merges
+    ~/bin/git-wt-add: willgit/bin/git-wt-add
+    ~/bin/git-wtf: willgit/bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/build-list.py: bin/build-list.py
     ~/bin/conky-i3bar: conky-i3bar
