--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -30,7 +30,6 @@
     ~/bin/git-wtf: willgit/bin/git-wtf
     ~/bin/blink2-tool: blink1-toys/blink2-tool
     ~/bin/build-list.py: bin/build-list.py
-    ~/bin/conky-i3bar: conky-i3bar
     ~/bin/dropbox: bin/dropbox.py
     ~/bin/git-clang-format: bin/git-clang-format
     ~/bin/git-list-pr: bin/git-list-pr
@@ -65,8 +64,8 @@
     ~/.config/Code/User/settings.json: ms-code-settings.json
     ~/.config/i3/config: i3config
     ~/.config/i3status/config: i3statusconf
+    ~/.config/i3status/config2: i3statusconf-2
     ~/.conkyrc: conkyrc
-    ~/.conkyrc-i3: conkyrc-i3
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.direnvrc: direnvrc
     ~/.emacs: emacs
