Add marathon training script

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,7 @@
     ~/bin/queue-list.py: bin/queue-list.py
     ~/bin/sns_beam: blink1-toys/sns_beam
     ~/bin/stats: bin/stats
+    ~/bin/training: bin/training.py
     ~/bin/travisci-to-blink1.sh: bin/travisci-to-blink1.sh
     ~/bin/update_countdown.sh: bin/update_countdown.sh
     ~/bin/vrpn_server: bin/vrpn_server
