Archive search at HFIR and SNS

--- a/Mantid.user.properties
+++ b/Mantid.user.properties
@@ -8,8 +8,8 @@
 #overriding any value set in the Mantid.properties file
 #algorithms.retained = 90
 
-#uncomment to enable archive search - ICat and Orbiter
-datasearch.searcharchive=On
+#archive search for these facilities
+datasearch.searcharchive=SNS,HFIR
 
 #uncomment to change logging level. Valid values are: error, warning, notice, information, debug
 logging.loggers.root.level=information
