Add fzf short-cut keys
This is a copy of https://github.com/junegunn/fzf/blob/master/shell/key-bindings.bash
taken on 2018-12-05. The source file was last modified 2018-04-25.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -78,6 +78,7 @@
     ~/.fonts/FiraCode-Retina.otf: font-FiraCode/distr/otf/FiraCode-Retina.otf
     ~/.fonts/FiraCode-Medium.otf: font-FiraCode/distr/otf/FiraCode-Medium.otf
     ~/.fonts/xkcd.otf: font-xkcd/xkcd/build/xkcd.otf
+    ~/.fzf.bash: fzf.bash
     ~/.gdb/python/libcxx: libcxx-pretty-printers/src/libcxx/
     ~/.gdb/python/boost: Boost-Pretty-Printer/boost/
     ~/.gdbinit: gdbinit
