--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -87,6 +87,7 @@
     ~/.gitexcludes: gitexcludes
     ~/.gitprompt: bash-git-prompt
     ~/.git-prompt-colors.sh: git-prompt-colors.sh
+    ~/.ripgreprc: ripgreprc
     ~/.rpmmacros: rpmmacros
     ~/.toprc: toprc
     ~/.topydo: topydo.conf
