--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     - [mkdir -p ~/.config/Code/User]
     - [mkdir -p ~/.config/i3]
     - [mkdir -p ~/.config/i3status]
+    - [mkdir -p ~/.config/sway]
     - [mkdir -p ~/etc]
     - [mkdir -p ~/.fonts]
     - [mkdir -p ~/.gdb/python]
@@ -67,6 +68,7 @@
     ~/.config/i3/config: i3config
     ~/.config/i3status/config: i3statusconf
     ~/.config/i3status/config2: i3statusconf-2
+    ~/.config/sway/config: sway-config
     ~/.conkyrc: conkyrc
     ~/.dir_colors: dircolors-solarized/dircolors.ansi-universal
     ~/.direnvrc: direnvrc
