--- a/ms-code-settings.json
+++ b/ms-code-settings.json
@@ -6,5 +6,6 @@
   "workbench.startupEditor": "newUntitledFile",
   "python.showStartPage": false,
   "editor.fontFamily": "'Fira Code Medium', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
-  "editor.fontLigatures": true
+  "editor.fontLigatures": true,
+  "files.trimTrailingWhitespace": true
 }
