--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -92,6 +92,7 @@
     ~/.gitexcludes: gitexcludes
     ~/.gitprompt: bash-git-prompt
     ~/.git-prompt-colors.sh: git-prompt-colors.sh
+    ~/.perfconfig: perfconfig
     ~/.ripgreprc: ripgreprc
     ~/.rpmmacros: rpmmacros
     ~/.toprc: toprc
