--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,11 @@ repos:
   hooks:
   - id: flake8
 
+-   repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.7.1.1
+    hooks:
+    -   id: shellcheck
+
 #- repo: https://github.com/cheshirekow/cmake-format-precommit
 #  rev: v0.6.10
 #  hooks:
