Automatically link dropbox directories

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     - [chmod 755 ~/bin/fixwhitespace]
     - [cp Mantid.user.properties ~/.mantid/Mantid.user.properties]
     - [./crontab-install.sh]
+    - [./dropbox-link.sh]
 
 - link:
     ~/.bash_profile: bash_profile
