--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -108,6 +108,7 @@
 - link:
     ~/bin/todo.sh: todo.txt-cli/todo.sh
     ~/.bash_completion.d/todo_completion: todo.txt-cli/todo_completion
+    ~/.todo.actions.d/againHelpers.sh: todo.actions.d/todo.txt-cli-again-addon/againHelpers.sh
     ~/.todo.actions.d/again: todo.actions.d/todo.txt-cli-again-addon/again
     ~/.todo.actions.d/edit: todo.actions.d/todo.txt-edit-addon/todo.actions.d/edit
     ~/.todo.actions.d/futureTasks: todo.actions.d/futureTasks
