--- a/starship.toml
+++ b/starship.toml
@@ -2,7 +2,7 @@
 add_newline = false
 
 # left prompt
-format = "$all$directory$character"
+format = "$all$git_branch$git_status$git_commit$git_state\n$git_metrics$directory$character"
 
 # move the rest of the prompt to the right
 #right_format = "$git_branch$git_commit$git_state$git_metrics$git_status"
@@ -18,3 +18,6 @@ behind = "⇣${count}"
 
 [git_metrics]
 disabled = false
+
+[line_break]
+disabled = true
