--- a/starship.toml
+++ b/starship.toml
@@ -2,7 +2,7 @@
 add_newline = false
 
 # left prompt
-format = "$all$git_branch$git_status$git_commit$git_state\n$git_metrics$directory$character"
+format = "$all$git_branch$git_status$git_commit$git_state\n$git_metrics$directory$character$status"
 
 # move the rest of the prompt to the right
 #right_format = "$git_branch$git_commit$git_state$git_metrics$git_status"
@@ -11,10 +11,34 @@ format = "$all$git_branch$git_status$git_commit$git_state\n$git_metrics$director
 #success_symbol uses the default
 error_symbol = "[\\(╯°□°\\)╯⏜ ┻━┻](bold red)" # flip the table
 
+[status]
+disabled = false
+format = '[$symbol $common_meaning$signal_name$maybe_int]($style) '
+map_symbol = true
+
+#[directory]
+#truncation_length = 5
+
+[cmd_duration]
+min_time = 10_000  # 10 seconds
+format = "[$duration]($style) "
+
 [git_status]
 ahead = "⇡${count}"
 diverged = "⇕⇡${ahead_count}⇣${behind_count}"
 behind = "⇣${count}"
+conflicted = "⚔️ "
+#ahead = "🏎️ 💨 ×${count}"
+#behind = "🐢 ×${count}"
+#diverged = "🔱 🏎️ 💨 ×${ahead_count} 🐢 ×${behind_count}"
+#untracked = "🛤️  ×${count}"
+stashed = "📦×${count} "
+modified = "📝×${count} "
+staged = "🗃️ ×${count} "
+renamed = "📛 ×${count} "
+deleted = "🗑️  ×${count} "
+style = "bright-white"
+format = "$all_status$ahead_behind"
 
 [git_metrics]
 disabled = false
