Turn off network calls on startup

--- a/Mantid.user.properties
+++ b/Mantid.user.properties
@@ -18,10 +18,11 @@ default.facility=SNS
 default.instrument=POWGEN
 
 MantidOptions.InstrumentView.UseOpenGL=On
-
+CheckMantidVersion.OnStartup=0
+UpdateInstrumentDefinitions.OnStartup=0
 #usagereports.enabled=1
 
 # normalize by bin width can be "On" or "Off"
-graph1d.autodistribution = Off
+graph1d.autodistribution=Off
 
 algorithms.categories.hidden=DataHandling\\LiveData\\Support;Deprecated;Workflow\\Inelastic\\UsesPropertyManager;Workflow\\SANS\\UsesPropertyManager
