--- a/Mantid.user.properties
+++ b/Mantid.user.properties
@@ -20,7 +20,7 @@ default.instrument=POWGEN
 MantidOptions.InstrumentView.UseOpenGL=On
 CheckMantidVersion.OnStartup=0
 UpdateInstrumentDefinitions.OnStartup=0
-#usagereports.enabled=1
+usagereports.enabled=0
 
 # normalize by bin width can be "On" or "Off"
 graph1d.autodistribution=Off
